Refactoring + replace state per file with state per class